# skyclaw

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  skyclaw.toml
.claude/skills/: add-channel.md  add-memory-backend.md  add-provider.md  add-tool.md  debug-skyclaw.md
Claude-Production-Grade-Suite/.orchestrator/receipts/: T11-technical-writer.json  T12-skill-maker.json  T9b-sre.json
Claude-Production-Grade-Suite/sre/: chaos-experiments.md
crates/skyclaw-agent/src/: context.rs  executor.rs  runtime.rs
crates/skyclaw-agent/tests/: runtime_integration.rs
crates/skyclaw-channels/src/: telegram.rs
crates/skyclaw-core/src/config/: loader.rs
crates/skyclaw-core/src/traits/: tool.rs
crates/skyclaw-core/src/types/: config.rs  message.rs
crates/skyclaw-providers/src/: anthropic.rs
crates/skyclaw-tools/: Cargo.toml
crates/skyclaw-tools/src/: file.rs  lib.rs  send_file.rs  shell.rs  web_fetch.rs
docs/api/: config.md  traits.md  types.md
docs/dev/: adding-channel.md  adding-provider.md  architecture.md  getting-started.md
docs/ops/: configuration.md  deployment.md  monitoring.md
docs/runbooks/: gateway-down.md  high-error-rate.md  incident-response.md  memory-pressure.md  provider-unreachable.md  vault-failure.md
src/: main.rs
