[package]
name = "skyclaw-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tool integrations for SkyClaw agents"

[features]
browser = ["dep:chromiumoxide"]

[dependencies]
skyclaw-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
bytes.workspace = true

# Optional: Browser automation
chromiumoxide = { workspace = true, optional = true }
